--- a/model_analysis.ipynb
+++ b/model_analysis.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing necessary libraries\n",
+    "\n",
     "import numpy as np \n",
     "import pandas as pd \n",
     "import os \n",
@@ -239,7 +241,6 @@
     "    KNeighborsClassifier(n_neighbors=5),\n",
     "    GradientBoostingClassifier(n_estimators=100, learning_rate=1.0, max_depth=1, random_state=42),\n",
     "    SVC()\n",
-    "\n",
     "    ]"
    ]
   },
